hphp/hack/test/typecheck/abstract_typeconsts/skip_one.php.exp
File "skip_one.php", line 10, characters 7-7:
Class C does not correctly implement all required members  (Typing[4110])
File "skip_one.php", line 10, characters 17-17:
Some members are incompatible with those declared in type B
Read the following to see why:
File "skip_one.php", line 11, characters 14-14:
The assigned type of this type constant is inconsistent with its parent
File "skip_one.php", line 5, characters 39-41:
Expected int
File "skip_one.php", line 11, characters 18-23:
But got string
